commit on 'master'

--- a/Aulas/index.html
+++ b/Aulas/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h4>Teste</h4>
+
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
+    
+        <img src="imagens/img.png" width="100"/>
+        <a href="https://google.com.br">Google</a>
     </body>
 </html>
